cluster/infra/flux-system/crd-schema-publisher/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: crd-schema-publisher
spec:
  # noinspection KubernetesUnknownValues
  hostnames: [ 'schemas.${DOMAIN_NAME}' ]
  parentRefs:
    - name: envoy
      namespace: envoy-system
  rules:
    - backendRefs:
        - name: crd-schema-publisher-caddy
          port: 80
